<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="profile_img_expr">src: @string/userBufferedImageExpression</string>
    <string name="userBufferedImageExpression">useBufferedImage: true;useBackgroundHint : false</string>

    <string name="eventparams_increment">exp_get:quantity from item->view;exp_store:quantity into item->view as string;min: 0</string>
    <string name="eventparams_cart_incdec">exp_get:quantity from item->loopvar;exp_store:quantity into item->loopvar as string;min: 0</string>

    <string name="app_name">DemoApp2</string>
    <string name="launcher_name">@string/app_name</string>
    <string name="activity_name">@string/launcher_name</string>
    <string name="error_text">There were errors on the page. Click here to view the same.</string>
    <string name="required_error_message">Should not be empty.</string>
    <string name="max_length_error_message">Maximum number of characters allowed is %d.</string>
    <string name="min_length_error_message">Minimum number of characters required is %d.</string>
    <string name="max_value_error_message">Max value allowed is %d.</string>
    <string name="min_value_error_message">Min value required is %d.</string>
    <string name="pattern_error_message">Invalid format specified.</string>
    <string name="url_error_message">Please enter valid url.</string>
    <string name="alphabets_error_message">Please enter only Alphabets.</string>
    <string name="alphanumeric_error_message">Please enter only alphanumeric characters.</string>
    <string name="date_error_message">Invalid date format.</string>
    <string name="inrange_error_message">Number must be between %d and %d.</string>
    <string name="email_error_message">Invalid email address.</string>
    <string name="mobile_error_message">Invalid Mobile number.</string>
    <string name="number_error_message">Must be number.</string>
    <string name="positivenumber_error_message">Should be positive integer.</string>
    <string name="pincode_error_message">Must be valid pincode.</string>
    <string name="length_between_error_message">Number length must be between %d and %d.</string>
    <string name="length_atmost_error_message">Number should be atmost %d.</string>
    <string name="length_atleast_error_message">Number should be atleast %d.</string>
    <string name="strongpassword_error_message">Password should contains atleast 8 characters, one uppercase letter, number and special character.</string>
    <string name="copyright">Copyright \u00a9 2017, Ashera</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="currency_format">Rs %s</string>
    <string name="loading" ts="true">Loading...</string>
    <string name="confirm_logout" ts="true">Do you want to logout?</string>
    <string name="update_password">Update Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="mandatory_format">%s *</string>
    <string name="login">Login</string>
    <string name="first_time_user">First time user?</string>
    <string name="click_me">Click me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="sound_notifications_of_warn">Sound and vibrate notifications are turned off. Tap to turn on.</string>
    <string name="no_notifications_found">No Notifications found</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth_dd_mm_yyyy">Date of birth (dd/MM/yyyy)</string>
    <string name="agree_to_terms_and_conditions">Agree to Terms and Conditions</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="clear">CLEAR</string>
    <string name="clear_bth">Clear</string>
    <string name="empty_bag">Empty Bag</string>
    <string name="continue_booking">Continue Booking</string>
    <string name="book_now">Book Now</string>
    <string name="select_a_store">Select a store</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="out_of_stock">We are out of stock. Please remove it from cart and retry.</string>
    <string name="grand_total">Grand Total</string>
    <string name="quantity_selection">Quantity Selection</string>
    <string name="mixer_help">Tap to increment mixer quantity/long press to reset the quantity to zero</string>
    <string name="add_mixer">Add Mixer</string>
    <string name="add_to_bag">Add To Bag</string>
    <string name="apply">Apply</string>
    <string name="clear_all">Clear All</string>
    <string name="filter">Filter</string>
    <string name="book">Book</string>
    <string name="drinks">Drinks</string>
    <string name="food">Food</string>
    <string name="refreshing_data_please_wait">Refreshing Data. Please wait...</string>
    <string name="change">Change</string>
    <string name="orders">Orders</string>
    <string name="change_password">Change Password</string>
    <string name="faq">FAQ</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="continue_txt">Continue</string>
    <string name="you_are_about_s_kms_from_our_store">You are about %s kms from our store.</string>
</resources>
